// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingDetailPage CreateAFlagView 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
      style="overflow: auto; width: calc(100% - 765px); height: calc(100vh - 140px);"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-xxlarge"
        level="2"
        style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
      >
        cf.onboarding.letsStart
      </h2>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        style="width: 400px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
        >
          cf.onboarding.inputLabel
        </p>
        <div
          class="TextInput--main"
        >
          <div
            class="bp3-input-group bp3-disabled"
          >
            <input
              class="bp3-input"
              disabled=""
              type="text"
              value="test-flag"
            />
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-top-xxlarge"
        style="display: flex; align-items: center;"
      >
        <span>
          cf.onboarding.successLabel
        </span>
        <span
          class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-green500"
          icon="tick"
        >
          <svg
            data-icon="tick"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick
            </desc>
            <path
              d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 0px; bottom: 60px; z-index: 0; width: 400px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
          style="font-weight: 500; color: rgb(34, 34, 42);"
        >
          cf.onboarding.simpliestFlag
        </h2>
        <img
          src="test-file-stub"
          style="align-self: center;"
          width="300"
        />
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 20px; color: rgb(107, 109, 133);"
          >
            cf.onboarding.simpliestFlagDescription
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-top-medium"
          >
            <a
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
              href="https://ngdocs.harness.io/article/1j7pdkqh7j-create-a-feature-flag#step_4_create_a_flag_type"
              rel="noreferrer noopener"
              role="button"
              tabindex="0"
              target="_blank"
            >
              <span
                class="bp3-button-text"
              >
                cf.onboarding.otherTypes
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage OnboardingDetailPage empty state should be rendered properly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-white"
    style="height: 100%;"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--padding-large"
      style="background: rgb(248, 251, 254); border: 1px solid #e7e7e7; height: 40px;"
    >
      <a
        href="/account/dummy/cf/orgs/dummy/projects/dummy/onboarding"
      >
        cf.shared.getStarted
      </a>
      <p
        class="StyledProps--font StyledProps--main"
      >
        /
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        cf.shared.quickGuide
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        /
      </p>
      <span
        style="flex-grow: 1;"
      />
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="height: calc(100% - 102px);"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_created-a-flag"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="created-a-flag"
            id="bp3-tab-title_cf-onboarding_created-a-flag"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.createAFlag
            </p>
          </div>
          <span
            class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
            icon="chevron-right"
            style="align-self: center; height: 20px;"
          >
            <svg
              data-icon="chevron-right"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                chevron-right
              </desc>
              <path
                d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_set-up-your-app"
            aria-disabled="true"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="set-up-your-app"
            id="bp3-tab-title_cf-onboarding_set-up-your-app"
            role="tab"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.setUpApp
            </p>
          </div>
          <span
            class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
            icon="chevron-right"
            style="align-self: center; height: 20px;"
          >
            <svg
              data-icon="chevron-right"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                chevron-right
              </desc>
              <path
                d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_test-your-flag"
            aria-disabled="true"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="test-your-flag"
            id="bp3-tab-title_cf-onboarding_test-your-flag"
            role="tab"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.testYourFlag
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_cf-onboarding_created-a-flag"
          class="bp3-tab-panel"
          id="bp3-tab-panel_cf-onboarding_created-a-flag"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main"
            style="height: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
              style="overflow: auto; width: calc(100% - 765px); height: calc(100vh - 140px);"
            >
              <h2
                class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-xxlarge"
                level="2"
                style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
              >
                cf.onboarding.letsStart
              </h2>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                style="width: 400px;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                >
                  cf.onboarding.inputLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
              style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 0px; bottom: 60px; z-index: 0; width: 400px;"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main"
                  level="2"
                  style="font-weight: 500; color: rgb(34, 34, 42);"
                >
                  cf.onboarding.simpliestFlag
                </h2>
                <img
                  src="test-file-stub"
                  style="align-self: center;"
                  width="300"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                    style="line-height: 20px; color: rgb(107, 109, 133);"
                  >
                    cf.onboarding.simpliestFlagDescription
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-top-medium"
                  >
                    <a
                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                      href="https://ngdocs.harness.io/article/1j7pdkqh7j-create-a-feature-flag#step_4_create_a_flag_type"
                      rel="noreferrer noopener"
                      role="button"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.onboarding.otherTypes
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1); align-items: center; position: fixed; left: 288px; bottom: 0px; right: 0px; height: 60px;"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          previous
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          next
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage SelectEnvironmentView should render data correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
        data-icon="spinner"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 36 36"
          width="16"
        >
          <path
            d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
            stroke="currentColor"
            stroke-dasharray="75,100"
            stroke-linecap="round"
            stroke-width="2.8"
            style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage SelectEnvironmentView should render loading correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
        data-icon="spinner"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 36 36"
          width="16"
        >
          <path
            d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
            stroke="currentColor"
            stroke-dasharray="75,100"
            stroke-linecap="round"
            stroke-width="2.8"
            style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage SetUpYourApplicationView 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
      style="overflow: auto; width: calc(100% - 400px); height: calc(100vh - 140px);"
    >
      <span
        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black StyledProps--padding-top-xsmall StyledProps--padding-bottom-xsmall StyledProps--padding-left-small StyledProps--padding-right-small"
        style="background: rgb(243, 243, 250); border-radius: 4px;"
      >
        <span>
          cf.onboarding.successLabel
        </span>
      </span>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-bottom-xlarge"
        level="2"
        style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
      >
        cf.onboarding.setupLabel
      </h2>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-weight: 600; font-size: 16px; color: rgb(34, 34, 42);"
          >
            cf.onboarding.selectLanguage
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
            style="background: rgb(250, 251, 252);"
          >
            <ul
              class="list"
            >
              <li
                class="item"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <button
                    class="button selected"
                  >
                    <img
                      alt="Java"
                      height="35"
                      src="test-file-stub"
                      width="35"
                    />
                  </button>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="font-weight: 500; color: rgb(85, 87, 112); font-size: 12px; text-align: center;"
                  >
                    Java
                  </span>
                </div>
              </li>
              <li
                class="item"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <button
                    class="button"
                  >
                    <img
                      alt="Golang"
                      height="35"
                      src="test-file-stub"
                      width="35"
                    />
                  </button>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="font-weight: 500; color: rgb(85, 87, 112); font-size: 12px; text-align: center;"
                  >
                    Golang
                  </span>
                </div>
              </li>
              <li
                class="item"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <button
                    class="button"
                  >
                    <img
                      alt="JavaScript"
                      height="35"
                      src="test-file-stub"
                      width="35"
                    />
                  </button>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="font-weight: 500; color: rgb(85, 87, 112); font-size: 12px; text-align: center;"
                  >
                    JavaScript
                  </span>
                </div>
              </li>
              <li
                class="item"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <button
                    class="button"
                  >
                    <img
                      alt="Android"
                      height="35"
                      src="test-file-stub"
                      width="35"
                    />
                  </button>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="font-weight: 500; color: rgb(85, 87, 112); font-size: 12px; text-align: center;"
                  >
                    Android
                  </span>
                </div>
              </li>
              <li
                class="item"
              >
                <div
                  class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                >
                  <button
                    class="button"
                  >
                    <img
                      alt="iOS"
                      height="35"
                      src="test-file-stub"
                      width="35"
                    />
                  </button>
                  <span
                    class="StyledProps--font StyledProps--main StyledProps--inline"
                    style="font-weight: 500; color: rgb(85, 87, 112); font-size: 12px; text-align: center;"
                  >
                    iOS
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-weight: 600; font-size: 16px; color: rgb(34, 34, 42);"
          >
            cf.onboarding.selectEnvironment
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
            style="background: rgb(250, 251, 252);"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
                  data-icon="spinner"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 36 36"
                    width="16"
                  >
                    <path
                      d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                      stroke="currentColor"
                      stroke-dasharray="75,100"
                      stroke-linecap="round"
                      stroke-width="2.8"
                      style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-weight: 600; font-size: 16px; color: rgb(34, 34, 42);"
          >
            cf.onboarding.setUpYourCode
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-large"
            style="padding-top: 0px;"
          >
            <div
              class="StyledProps--font StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-medium"
                style="color: rgb(51, 51, 51); line-height: 18px;"
              >
                <span>
                  cf.onboarding.readme.java
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 0px; bottom: 60px; z-index: 0; width: 400px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
          style="font-weight: 500; color: rgb(34, 34, 42);"
        >
          cf.onboarding.help.heading1
        </h2>
        <img
          height="101"
          src="test-file-stub"
          style="align-self: center;"
          width="248"
        />
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 20px; color: rgb(107, 109, 133);"
        >
          cf.onboarding.help.text1
        </p>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
          style="font-weight: 500; color: rgb(34, 34, 42);"
        >
          cf.onboarding.help.heading2
        </h2>
        <img
          height="134"
          src="test-file-stub"
          style="align-self: center;"
          width="180"
        />
        <p
          class="StyledProps--font StyledProps--main"
          style="line-height: 20px; color: rgb(107, 109, 133);"
        >
          cf.onboarding.help.text2
        </p>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <a
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
            href="https://docs.harness.io"
            rel="noreferrer noopener"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <span
              class="bp3-button-text"
            >
              cf.onboarding.help.getStarted
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage Should be able to create a flag 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container StyledProps--background-white"
    style="height: 100%;"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--padding-large"
      style="background: rgb(248, 251, 254); border: 1px solid #e7e7e7; height: 40px;"
    >
      <a
        href="/account/dummy/cf/orgs/dummy/projects/dummy/onboarding"
      >
        cf.shared.getStarted
      </a>
      <p
        class="StyledProps--font StyledProps--main"
      >
        /
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        cf.shared.quickGuide
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        /
      </p>
      <span
        style="flex-grow: 1;"
      />
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="height: calc(100% - 102px);"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_created-a-flag"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="created-a-flag"
            id="bp3-tab-title_cf-onboarding_created-a-flag"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.createAFlag
            </p>
          </div>
          <span
            class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
            icon="chevron-right"
            style="align-self: center; height: 20px;"
          >
            <svg
              data-icon="chevron-right"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                chevron-right
              </desc>
              <path
                d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_set-up-your-app"
            aria-disabled="true"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="set-up-your-app"
            id="bp3-tab-title_cf-onboarding_set-up-your-app"
            role="tab"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.setUpApp
            </p>
          </div>
          <span
            class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
            icon="chevron-right"
            style="align-self: center; height: 20px;"
          >
            <svg
              data-icon="chevron-right"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                chevron-right
              </desc>
              <path
                d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            aria-controls="bp3-tab-panel_cf-onboarding_test-your-flag"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="test-your-flag"
            id="bp3-tab-title_cf-onboarding_test-your-flag"
            role="tab"
            tabindex="0"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              cf.onboarding.testYourFlag
            </p>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_cf-onboarding_created-a-flag"
          class="bp3-tab-panel"
          id="bp3-tab-panel_cf-onboarding_created-a-flag"
          role="tabpanel"
        >
          <div
            class="StyledProps--font StyledProps--main"
            style="height: 100%;"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
              style="overflow: auto; width: calc(100% - 765px); height: calc(100vh - 140px);"
            >
              <h2
                class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-xxlarge"
                level="2"
                style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
              >
                cf.onboarding.letsStart
              </h2>
              <div
                class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
                style="width: 400px;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-semi-bold"
                >
                  cf.onboarding.inputLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      type="text"
                      value="test-boolean-flag"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
              style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 0px; bottom: 60px; z-index: 0; width: 400px;"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <h2
                  class="StyledProps--font StyledProps--font-h2 StyledProps--main"
                  level="2"
                  style="font-weight: 500; color: rgb(34, 34, 42);"
                >
                  cf.onboarding.simpliestFlag
                </h2>
                <img
                  src="test-file-stub"
                  style="align-self: center;"
                  width="300"
                />
                <div
                  class="StyledProps--font StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                    style="line-height: 20px; color: rgb(107, 109, 133);"
                  >
                    cf.onboarding.simpliestFlagDescription
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-top-medium"
                  >
                    <a
                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
                      href="https://ngdocs.harness.io/article/1j7pdkqh7j-create-a-feature-flag#step_4_create_a_flag_type"
                      rel="noreferrer noopener"
                      role="button"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.onboarding.otherTypes
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      style="box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1); align-items: center; position: fixed; left: 288px; bottom: 0px; right: 0px; height: 60px;"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          previous
        </span>
      </button>
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-button-text"
        >
          next
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
    </div>
  </div>
</div>
`;

exports[`OnboardingDetailPage TestYourFlagViewView 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: 100%;"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
      style="overflow: auto; width: calc(100% - 765px); height: calc(100vh - 140px);"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--padding-bottom-medium"
        level="2"
        style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
      >
        cf.onboarding.listenToEvent
      </h2>
      <p
        class="StyledProps--font StyledProps--main"
        style="color: rgb(34, 34, 42);"
      >
        cf.onboarding.toggleLabel
      </p>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-xlarge StyledProps--padding-top-xlarge"
        style="border: 1px solid #d9dae5; border-radius: 8px;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-left-small StyledProps--padding-bottom-large"
        >
          <label
            class="bp3-control bp3-switch bp3-align-right bp3-large"
          >
            <input
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
          </label>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main"
              style="font-weight: 600; font-size: 13px; line-height: 20px; color: rgb(11, 11, 13); align-self: baseline;"
            >
              test-flag
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-large StyledProps--padding-bottom-large"
          style="align-items: center; background: rgb(243, 243, 250); border-top: 1px solid #D9DAE5;"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-blue500"
            data-icon="steps-spinner"
          >
            <svg
              height="24"
              viewBox="0 0 128 128"
              width="24"
            >
              <g>
                <path
                  d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                  fill="#ff8e02"
                />
                <path
                  d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                  fill="#ffddb3"
                  fill-opacity="0.3"
                />
                <path
                  d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                  fill="#ffd29a"
                  fill-opacity="0.4"
                />
                <path
                  d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                  fill="#ffc680"
                  fill-opacity="0.5"
                />
                <path
                  d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                  fill="#ffbb67"
                  fill-opacity="0.6"
                />
                <path
                  d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                  fill="#ffb04d"
                  fill-opacity="0.7"
                />
                <path
                  d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                  fill="#ffa535"
                  fill-opacity="0.8"
                />
                <path
                  d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                  fill="#ff991b"
                  fill-opacity="0.9"
                />
                <animatetransform
                  attributeName="transform"
                  calcMode="discrete"
                  dur="1200ms"
                  repeatCount="indefinite"
                  type="rotate"
                  values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                />
              </g>
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-left-medium"
            style="font-size: 14px;"
          >
            cf.onboarding.listeningToEvent
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 400px; bottom: 60px; z-index: 0;"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large StyledProps--background-black"
        style="border-radius: 8px; border: 1px solid #d9dae6; width: 300px; height: 150px;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-mono StyledProps--color StyledProps--color-white"
        >
          <pre
            style="margin: 0px;"
          >
            cf.onboarding.waitForConnect
          </pre>
        </p>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
        style="width: 300px;"
      >
        cf.onboarding.behindTheSenes
      </p>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
      style="box-shadow: -8px 0 10px -5px rgb(96 97 112 / 16%); position: fixed; top: 90px; right: 0px; bottom: 60px; z-index: 0; width: 400px;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main"
          level="2"
          style="font-weight: 500; color: rgb(34, 34, 42);"
        >
          cf.onboarding.help.test.heading
        </h2>
        <img
          height="163"
          src="test-file-stub"
          style="align-self: center;"
          width="192"
        />
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 20px; color: rgb(107, 109, 133);"
          >
            cf.onboarding.help.test.text1
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-top-medium"
            style="line-height: 20px; color: rgb(107, 109, 133);"
          >
            cf.onboarding.help.test.text2
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-top-medium"
          >
            <a
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--link"
              href="https://docs.harness.io"
              rel="noreferrer noopener"
              role="button"
              tabindex="0"
              target="_blank"
            >
              <span
                class="bp3-button-text"
              >
                cf.onboarding.help.test.readmore
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
